Changed Pagination type to Classic Files modified - [DataEntry.html]

--- a/src/main/webapp/pages/DataEntry/DataEntry.html
+++ b/src/main/webapp/pages/DataEntry/DataEntry.html
@@ -976,7 +976,7 @@
                 </wm-tabpane>
                 <wm-tabpane name="tabpane18" title="VendorLicenses">
                     <wm-livegrid formlayout="dialog" name="livegrid17_1">
-                        <wm-grid gridfirstrowselect="true" editmode="dialog" title="Vendorlicenses List" dataset="bind:Variables.Cx2VendorLicensesData.dataSet" navigation="Basic" name="grid18_1" filtermode="multicolumn" exportformat="EXCEL">
+                        <wm-grid gridfirstrowselect="true" editmode="dialog" title="Vendorlicenses List" dataset="bind:Variables.Cx2VendorLicensesData.dataSet" navigation="Classic" name="grid18_1" filtermode="multicolumn" exportformat="EXCEL">
                             <wm-grid-column binding="id" caption="Id" type="integer" primary-key="true" generator="identity" readonly="true" show="true"></wm-grid-column>
                             <wm-grid-column binding="licenseNumber" caption="License Number" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
                             <wm-grid-column binding="issuedDate" caption="Issued Date" type="date" generator="assigned" show="true" readonly="false"></wm-grid-column>
